--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DATABASE=postgres://elena:123@localhost:5432/svoyaigra1
+DATABASE=postgres://anna:123@localhost:5432/svoyaigra2
 SECRET_KEY_SESSION=secret_key_SeSsIoN_2
